@@ -63,6 +63,7 @@ interface:
 - due to adding SCIP_DECL_PROPINITPRE, SCIP_DECL_PROPEXITPRE, SCIP_DECL_PROPPRESOL, new timing flag and presolving paramters for propagators the SCIPincludeProp() method has a new list of parameters
 - new methods SCIPpropInitpre, SCIPpropExitpre, SCIPpropPresol which initializes, exists and executes the presolving phase
 - due to the new timingmask for propagation calls SCIPincludeConshdlr() has the timingmask as a new parameter
+- new method SCIProwGetAge() to access the age of a row (pub_lp.h/lp.c)
 
 performance improvements:
 - performance improvements in prop_vbounds
